syntax = "proto3";

package image;

service Image {
    rpc Add(AddRequest) returns (AddResponse) {}
    rpc Finish(FinRequest) returns (FinResponse) {}
}

message FinRequest {
    string filename = 1;
    int64 size = 2;
    int64 height = 3;
    int64 width = 4;
}

message FinResponse {
}

message AddRequest {
    int64 uid = 1;
    repeated string names = 2;
}

message AddResponse {
}

